fixed overlapping carousel arrows

--- a/app/assets/stylesheets/helpers.scss
+++ b/app/assets/stylesheets/helpers.scss
@@ -95864,3 +95864,6 @@
 .pb-line-height-140 {
   line-height: 140px;
 }
+.pb-width-auto {
+  width: auto !important;
+}
